libs/toolkit-contract-macros-tests/tests/ui/fail/grpc_fake_secctx.stderr
warning: unexpected `cfg` condition value: `grpc-client`
  --> tests/ui/fail/grpc_fake_secctx.rs:22:1
   |
22 | / #[grpc_contract(
23 | |     package = "demo.v1",
24 | |     service = "DemoApi",
25 | |     stubs_module = "crate::stubs"
26 | | )]
   | |__^
   |
   = note: no expected values for `feature`
   = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `grpc_contract` crate for guidance on how handle this unexpected cfg
   = help: the attribute macro `grpc_contract` may come from an old version of the `toolkit_contract_macros` crate, try updating your dependency with `cargo update -p toolkit_contract_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the attribute macro `grpc_contract` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SecurityContext: SecurityContextMarker` is not satisfied
  --> tests/ui/fail/grpc_fake_secctx.rs:29:31
   |
29 |     async fn ping(&self, ctx: SecurityContext, body: String) -> Result<u32, std::io::Error>;
   |                               ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `SecurityContextMarker` is not implemented for `SecurityContext`
  --> tests/ui/fail/grpc_fake_secctx.rs:13:1
   |
13 | pub struct SecurityContext {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `toolkit_contract::assert_security_context`
  --> $WORKSPACE/libs/toolkit-contract/src/grpc_repr.rs
   |
   | pub const fn assert_security_context<T: SecurityContextMarker + ?Sized>() {}
   |                                         ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_security_context`
